@@ -1,6 +1,9 @@
 Release history for Dist-Zilla-App-Command-critic
 
 {{$NEXT}}
+ [Bugfix]
+ - Include bin and script in all_perl_files search roots. I'm not sure how
+   Test::Perl::Critic seems to do this.
 
 0.001000 2014-04-12T23:42:06Z
  - First version.
